etc/k8s/go/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go
spec:
  tls:
    - hosts:
        - localhost
#      secretName: go-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go
                port:
                  number: 80
